--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
       href="https://unpkg.com/@videojs/themes@1/dist/city/index.css"
       rel="stylesheet"
     />
-
+    <!-- Coookiebot-->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="12697851-f690-44c5-9b52-72ec61c550e3" data-blockingmode="auto" type="text/javascript"></script>
   </head>
   <body>
     <app-root></app-root>
