--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
       rel="stylesheet"
     />
     <!-- Coookiebot-->
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="12697851-f690-44c5-9b52-72ec61c550e3" data-blockingmode="auto" type="text/javascript"></script>
+    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="12697851-f690-44c5-9b52-72ec61c550e3" data-blockingmode="auto" type="text/javascript"></script> aleks -->
+
+
+    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="43975c65-e597-45e5-99f8-b839b95d6286" data-blockingmode="auto" type="text/javascript"></script> björn -->
   </head>
   <body>
     <app-root></app-root>
