--- a/src/consent.html
+++ b/src/consent.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="12697851-f690-44c5-9b52-72ec61c550e3"  type="text/javascript"></script> aleks  -->
-
-    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="43975c65-e597-45e5-99f8-b839b95d6286"  type="text/javascript"></script>    björn -->
+    <!-- aleks -->
+    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="12697851-f690-44c5-9b52-72ec61c550e3"  type="text/javascript"></script> -->
+    <!-- björn -->
+    <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="43975c65-e597-45e5-99f8-b839b95d6286"  type="text/javascript"></script> -->
 </body>
 </html>
