--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       href="https://unpkg.com/@videojs/themes@1/dist/city/index.css"
       rel="stylesheet"
     />
+  </head>
   <body>
     <app-root></app-root>
   </body>
